log
Thu Mar 26 07:01:54 PM UTC 2026: 
 tests:  12|0
total_score: 60/60
1c71abd
Thu Mar 26 07:17:35 PM UTC 2026: 
 list.c | 96 +++++++++++++++++++++---------------------------------------------
 1 file changed, 30 insertions(+), 66 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:95:5: error: expected ‘,’ or ‘;’ before ‘list’
   95 |     list->current->next->prev = list->current->prev;
      |     ^~~~
0713b7d
Thu Mar 26 07:17:46 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c7bea38
Thu Mar 26 07:35:30 PM UTC 2026: 
 list.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:98:12: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   98 |         if(lista->current->next != NULL && lista->current->prev != NULL)
      |            ^~~~~
      |            list
list.c:98:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:112:48: error: expected ‘;’ before ‘:’ token
  112 |             list->current = list->current->next:
      |                                                ^
      |                                                ;
a5f92cc
Thu Mar 26 07:35:41 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:98:12: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   98 |         if(lista->current->next != NULL && lista->current->prev != NULL)
      |            ^~~~~
      |            list
list.c:98:12: note: each undeclared identifier is reported only once for each function it appears in
ff4629d
Thu Mar 26 07:35:51 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:98:43: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   98 |         if(list->current->next != NULL && lista->current->prev != NULL)
      |                                           ^~~~~
      |                                           list
list.c:98:43: note: each undeclared identifier is reported only once for each function it appears in
8325326
Thu Mar 26 07:36:06 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
1ffed7c
Thu Mar 26 07:36:10 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
57939a4
Thu Mar 26 07:42:20 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
9299a4c
Thu Mar 26 07:47:46 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
be0bbae
Fri Mar 27 06:39:49 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
7c4267a
Fri Mar 27 06:40:55 PM UTC 2026: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|4
total_score: 20/60
a66f0fc
Fri Mar 27 06:42:27 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
489f77f
Fri Mar 27 06:43:27 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
ff2f4af
Fri Mar 27 06:45:31 PM UTC 2026: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:61:1: error: expected ‘;’ before ‘}’ token
   61 | }
      | ^
07de561
Fri Mar 27 06:45:39 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 25/60
3467c8a
Fri Mar 27 06:47:26 PM UTC 2026: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|4
total_score: 25/60
4d42771
Fri Mar 27 06:47:39 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 25/60
473917f
Fri Mar 27 06:48:34 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 25/60
2063100
Fri Mar 27 06:49:55 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
5d0a293
Fri Mar 27 06:50:46 PM UTC 2026: 
 tests:  3|4
total_score: 25/60
5764431
